modified the schemas to accommodate nesting and added new api endpoints

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,9 @@
 {% block content %}
 
 <div style="text-align: center">
-    <h1>Welcome</h1>
-    
+    <h1>RemoteScreen Flask API Hosted Here</h1>
+
     <h2>Project Version: {{version}}</h2>
-    
-    <h3>Awesome... {{message}}</h3>
 
 </div>
 
